devops-starter-pack/kubernetes-practice/08_hpa/manifests/webserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver-ingress
  namespace: webapp
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: webserver-service
            port:
              name: http
        path: /
        pathType: Exact
